--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
+    background-color: #EAE4DD;
 }
 
 .navbar {
@@ -13,13 +14,13 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color: #03346E;
     padding: 10px 20px;
     width: 100%;
 }
 
 .navbar .logo a {
-    color: white;
+    color: #EAE4DD;
     text-decoration: none;
     font-size: 24px;
 }
@@ -34,14 +35,14 @@ body {
 }
 
 .nav-links a {
-    color: white;
+    color: #EAE4DD;
     text-decoration: none;
     font-size: 18px;
     transition: color 0.3s ease;
 }
 
 .nav-links a:hover {
-    color: #ff6347;
+    color: #6EACDA;
 }
 
 .hero {
@@ -106,9 +107,8 @@ body {
 }
 
 .social-icon:hover i {
-    color: #ff6347;
+    color: #6EACDA;
 }
-
 
 .up-2{
     width: 35%;
@@ -129,7 +129,7 @@ body {
 .about{
     height: 100vh;
     width: 100%;
-    background-color: darkcyan;
+    background-color: #6EACDA;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -247,7 +247,8 @@ video{
     width: 45%;
     display: flex;
     justify-content: center;
-    background-color: #6A9C89;
+    background-color: #6EACDA;
+    color: #03346E;
     border-radius: 5px;
 }
 
@@ -259,7 +260,7 @@ video{
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    background-color: darkcyan;
+    background-color: #6EACDA;
 }
 
 .title-projects{
@@ -283,7 +284,7 @@ video{
     background-color: #f0f0f0;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s ease-in-out;
     position: relative;
     padding: 20px;
@@ -302,7 +303,7 @@ video{
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, rgba(0, 123, 255, 0.7), rgba(0, 123, 255, 0));
+    background: linear-gradient(180deg, rgba(3, 52, 110, 0.8), rgba(110, 172, 218, 0));
     transition: top 0.3s ease;
     z-index: 0;
 }
@@ -332,7 +333,7 @@ video{
 }
 
 .git-icon i:hover {
-    color: #0015ff;
+    color: #6EACDA;
 }
 
 .contact{
@@ -350,7 +351,7 @@ video{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: aquamarine;
+    background-color: #6EACDA;
     border-radius: 10px;
     max-width: 500px;
 }
@@ -404,7 +405,7 @@ video{
 footer{
     height: 70px;
     width: 100%;
-    background-color: #333;
+    background-color: #03346E;
     display: flex;
     flex-direction: column;
     justify-content: center;
